# password-setup

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
sui-zklogin/password_manager_zklogin/: Move.toml
sui-zklogin/password_manager_zklogin/sources/: main.move
