[package]
name = "password-setup"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies]
seal = "0.1.2"       # Use the correct version
walrus = "0.1.0"     # Use the correct version
dotenvy = "0.15"      # For .env loading
serde = { version = "1", features = ["derive"] }
serde_json = "1"